<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".CalculoActivity">

    <TextView
        android:layout_margin="10dp"
        android:gravity="center_horizontal"
        android:textStyle="bold"
        android:textSize="16sp"
        android:text="@string/entre_com_o_pre_o_e_quantidade_do_produto_1_e_produto_2_que_voc_deseja_comparar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></TextView>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayoutProdutoUm"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dip"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:text="@string/produto_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

            <View
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/editTextPreco1"
                android:hint="@string/preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/editTextQuantidade1"
                android:hint="@string/quantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

        </LinearLayout>

        <View
            android:background="@color/colorPrimary"
            android:layout_width="1dp"
            android:layout_height="match_parent"></View>

        <LinearLayout
            android:id="@+id/linearLayoutProdutoDois"
            android:layout_weight="1"
            android:orientation="vertical"
            android:layout_width="0dip"
            android:layout_height="wrap_content">

            <TextView
                android:gravity="center_horizontal"
                android:textStyle="italic"
                android:text="@string/produto_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></TextView>

            <View
                android:background="@color/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="1dp"></View>

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/editTextPreco2"
                android:hint="@string/preco"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

            <EditText
                android:inputType="numberDecimal"
                android:id="@+id/editTextQuantidade2"
                android:hint="@string/quantidade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></EditText>

        </LinearLayout>


    </LinearLayout>


    <Button
        android:onClick="calcular"
        android:id="@+id/buttonCalcular"
        android:layout_margin="10dp"
        android:text="@string/calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"></Button>

<TextView
    android:gravity="center_horizontal"
    android:textStyle="bold"
    android:layout_margin="20dp"
    android:textSize="25sp"
    android:id="@+id/textViewResultado"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"></TextView>

</LinearLayout>